    - Added !ram_midways_override address that can be used to override midways (prevent midways from spawning and/or prevent room checkpoints to work). Inspired by the "No midways" mode in the hack "Sure Shot".

v0.3.5:
    - Fixed insertion issue in case another UberASM code uses nested namespaces, for example Dynamic Z (thanks to Alex for reporting this).
    - Added label definition for each Retry freeram define so that they can be referenced by other UberASM codes without having to copy-paste the defines in the other files.
    - - Added setting (turned on by default) for Boo Ring's position reset on death and/or on level load, useful for consistency in Kaizo levels.
    - Added optional fix for some animations still running when the Retry prompt is shown (like Magikoopa's Magic flashing), with the !prompt_freeze = 2 setting.
    - Fixed timer still ticking down while the Retry prompt is shown when using !prompt_freeze = 0.
    - Added optional fix for being able to drop the reserve item while Mario is dying or the Retry prompt is shown.
    - Added compatibility with MarioFanGamer's "Inline Layer 3 Messages" patch (no need to use !retry = 1 in the patch).
    - Added !prompt_wave and !prompt_wave_speed options to make the letters in the currently selected prompt option wave up and down.

v0.3.4:
    - Fixed issue where using $0DAA-$0DAD to disable pressing select wouldn't stop Retry from exiting the level when holding the select button.
    - Better handling of the !fast_prompt option in the code.
    - Restored Retry patch feature where pressing A/B during the death animation makes the prompt show immediately (when not using !fast_prompt == 1).
    - Fixed issue where dying in the intro level and retrying would send you to level 0 (thanks to Selicre for reporting this).
    - Added !prompt_freeze setting to allow to keep sprites and animations running while the Retry prompt is shown.